# dip4_ws

./: .ycm_extra_conf.py  README.md  expe4.cpp
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/color_pkg/: color
devel/lib/pkgconfig/: color_pkg.pc
devel/share/color_pkg/cmake/: color_pkgConfig.cmake
src/color_pkg/: CMakeLists.txt
src/color_pkg/src/: color.cpp
